Add stable api with parse command

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -12,3 +12,15 @@ RUN pip install -r requirements.txt
 COPY ./server /server
 
 RUN python manage.py collectstatic --noinput
+
+#########################################
+
+FROM nginx:1.17.2-alpine
+
+RUN mkdir /nginx
+
+RUN rm -v /etc/nginx/nginx.conf
+COPY ./nginx/nginx.conf /etc/nginx/nginx.conf
+COPY ./nginx/ssl /etc/ssl/
+
+COPY --from=server /server/staticfiles /nginx/static
