--- a/docker-compose.master.yml
+++ b/docker-compose.master.yml
@@ -1,21 +1,32 @@
 version: '3.4'
 services:
+    nginx:
+      build:
+        context: ./
+        dockerfile: ./nginx/Dockerfile
+      depends_on:
+        - server
+      ports:
+        - 80:80
+        - 443:443
+      restart: always
+
     server:
       build:
         context: ./
         dockerfile: ./server/Dockerfile
-      command: python manage.py runserver 0.0.0.0:8000
+      command: gunicorn config.wsgi -c config/gunicorn.py
       volumes:
         - ./server:/server
-      ports:
-        - "8000:8000"
       depends_on:
         - db
       environment:
-          DEBUG: 'True'
+          DEBUG: 'False'
           DATABASE_URL: 'postgres://postgres:@db:5432/postgres'
           BROKER_URL: 'amqp://user:password@rabbitmq:5672/my_vhost'
           REDIS_URL: 'redis://redis:6379/0'
+      restart: always
+
     db:
       image: postgres:11.2
       depends_on:
@@ -23,7 +34,9 @@ services:
       environment:
         POSTGRES_DB: postgres
         POSTGRES_USER: postgres
+      restart: always
 
     redis:
       image: redis:5.0.5
+      restart: always
 
